开始清理和转换最后的API差异